--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,7 @@
 [build]
-  publish = "client/build"
+  base = "client"
   command = "npm run build"
+  publish = "client/build"
 
 [[redirects]]
   from = "/*"
